# Tekstoviy-redactor-c--project

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
